fix: set gap for container

--- a/Open_Delivery/assets/scss/common/components/_components-container.scss
+++ b/Open_Delivery/assets/scss/common/components/_components-container.scss
@@ -5,4 +5,5 @@
     grid-column: 2;
     display: flex;
     flex-direction: column;
+    gap: $containergap;
 }
